[gd_scene load_steps=14 format=3 uid="uid://bt6yu66rx5g0l"]

[ext_resource type="Script" uid="uid://ddkni61nd80vt" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/main.gd" id="1_0ppkx"]
[ext_resource type="Script" uid="uid://dhoxth4cdkxq8" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/day_night_cycle.gd" id="2_hy8hq"]
[ext_resource type="PackedScene" uid="uid://buts4ehxirrur" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/player.tscn" id="3_c3bvi"]
[ext_resource type="PackedScene" uid="uid://4dp808w623li" path="res://levels/playerhouse.tscn" id="4_r73uj"]
[ext_resource type="PackedScene" uid="uid://dho66uk5v1m1h" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/QuestLog.tscn" id="6_qayf5"]
[ext_resource type="Script" uid="uid://t0jin1h5k0f2" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/game_clock_ui.gd" id="11_6x66l"]
[ext_resource type="Script" uid="uid://c1uydoq5x125w" path="res://Inventory/inventory_interface.gd" id="12_8fpue"]
[ext_resource type="Script" uid="uid://8srtvjvdab6y" path="res://sprites/Hana Caraka - Topdown Tileset/Hana Caraka - Topdown Tileset/House/cursor_selector.gd" id="12_qayf5"]
[ext_resource type="PackedScene" uid="uid://chqgfuqs3wn4q" path="res://Inventory/inventory.tscn" id="13_ykfl3"]
[ext_resource type="PackedScene" uid="uid://bpfmoo7pgcvyl" path="res://Inventory/slot.tscn" id="14_nnk2e"]
[ext_resource type="PackedScene" uid="uid://cy1g05gn51fat" path="res://Inventory/hot_bar_inventory.tscn" id="15_iurc1"]
[ext_resource type="FontFile" uid="uid://bvn3wtsegknv" path="res://fonts/MineMouseRegular-BL3DB.ttf" id="16_j4iur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuhlx"]
bg_color = Color(0.4379362, 0.68035144, 0.21081644, 0.16862746)

[node name="Game" type="Node2D"]
script = ExtResource("1_0ppkx")
metadata/_edit_horizontal_guides_ = [-66.0]

[node name="DayNightCycle" type="CanvasModulate" parent="."]
script = ExtResource("2_hy8hq")

[node name="Player" parent="." instance=ExtResource("3_c3bvi")]
z_index = 8
position = Vector2(175, 143)

[node name="Start" parent="." instance=ExtResource("4_r73uj")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("11_6x66l")

[node name="QuestLog" parent="UI" instance=ExtResource("6_qayf5")]
visible = false
offset = Vector2(0, 10)
transform = Transform2D(1, 0, 0, 1, 0, 10)

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("12_8fpue")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("13_ykfl3")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 50.0
offset_right = -13.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
mouse_filter = 2

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("13_ykfl3")]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_top = 150.0
offset_right = -13.0
offset_bottom = 230.0
grow_horizontal = 2
scale = Vector2(1.3, 1.3)
mouse_filter = 2

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("14_nnk2e")]
modulate = Color(1, 1, 1, 0.49019608)
self_modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 0
mouse_filter = 2

[node name="HotBarInventory" parent="UI" instance=ExtResource("15_iurc1")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -84.0
offset_right = -12.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.2, 1.2)

[node name="Time" type="CanvasLayer" parent="UI"]
script = ExtResource("11_6x66l")

[node name="TimeAndMonth" type="Panel" parent="UI/Time"]
anchors_preset = -1
anchor_left = 0.9713542
anchor_right = 1.0
anchor_bottom = 0.0030864198
offset_left = -97.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tuhlx")

[node name="ActualTime" type="Label" parent="UI/Time/TimeAndMonth"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.5
offset_top = 1.5
offset_right = 22.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.2901961, 0, 1)
theme_override_fonts/font = ExtResource("16_j4iur")
theme_override_font_sizes/font_size = 20
text = "T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameMonthAndDate" type="Label" parent="UI/Time/TimeAndMonth"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55940646
anchor_top = 0.89759034
anchor_right = 0.55940646
anchor_bottom = 0.89759034
offset_left = -33.5
offset_top = -68.5
offset_right = 26.5
offset_bottom = -45.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.2901961, 0, 1)
theme_override_fonts/font = ExtResource("16_j4iur")
theme_override_font_sizes/font_size = 20
text = "M"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Settings" type="CanvasLayer" parent="UI"]

[node name="OptionsContainer" type="Panel" parent="UI/Settings"]
offset_left = 3.0
offset_top = 3.0
offset_right = 83.0
offset_bottom = 43.0

[node name="X" type="Label" parent="UI/Settings/OptionsContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -11.5
offset_right = 5.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="TileSelector" type="Sprite2D" parent="."]
visible = false
z_index = 2
script = ExtResource("12_qayf5")
